# CS445_Project3

./: CMakeLists.txt  README.txt  project3.sublime-project  project3.sublime-workspace
src/: CMakeLists.txt  color_tint.cpp  color_tint.hpp  glutscene.cpp  glutscene.hpp  main.cpp  transform.cpp  transform.hpp
src/fsm/: finite_state_system.hpp
